# mariaT21

./: callchangemode.sh  callmaria.sh  callrosaria.sh  path0.txt  path1.txt  path2.txt  path_quadrado.txt  path_teste_fator.txt  point0.txt  simulacao.sh  teste.sh
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
log/: log_child_detection_20210920_135006  log_child_detection_20210920_142816  log_child_detection_20210920_143137  log_child_detection_20210920_144019  log_child_detection_20210920_144256  log_child_detection_20210920_144533  log_child_detection_20210920_145750  log_child_detection_20210920_150729  log_child_detection_20210920_153900  log_child_detection_20210920_154614  log_child_detection_20210920_160657  log_child_detection_20210922_091412  log_child_detection_20210922_091617  log_child_detection_20210922_092300  log_child_detection_20210922_095141  log_emotion_detection_20210920_135006  log_emotion_detection_20210920_142816  log_emotion_detection_20210920_143137  log_emotion_detection_20210920_144019  log_emotion_detection_20210920_144256  log_emotion_detection_20210920_144533  log_emotion_detection_20210920_145750  log_emotion_detection_20210920_150729  log_emotion_detection_20210920_153900  log_emotion_detection_20210920_154614  log_emotion_detection_20210920_160657  log_emotion_detection_20210922_091412  log_emotion_detection_20210922_091617  log_emotion_detection_20210922_092300  log_emotion_detection_20210922_095141  log_pose_20210920_135006  log_pose_20210920_142816  log_pose_20210920_143137  log_pose_20210920_144019  log_pose_20210920_144256  log_pose_20210920_144533  log_pose_20210920_145750  log_pose_20210920_150729  log_pose_20210920_153900  log_pose_20210920_154614  (+65 more)
log/P(-2, 0)/: analise.ods  log_child_detection_20210625_113435  log_emotion_detection_20210625_113435  log_pose_20210625_113435  log_state_machine_distance_20210625_113435  log_state_machine_onchange_20210625_113435  log_testekid_20210625_113435  log_workspace_20210625_113435
log/P(-3,-3)/: analise.ods  log_child_detection_20210625_115315  log_emotion_detection_20210625_115315  log_pose_20210625_115315  log_state_machine_distance_20210625_115315  log_state_machine_onchange_20210625_115315  log_testekid_20210625_115315  log_workspace_20210625_115315
log/P(0,-2)/: analise.ods  log_child_detection_20210625_114952  log_emotion_detection_20210625_114952  log_pose_20210625_114952  log_state_machine_distance_20210625_114952  log_state_machine_onchange_20210625_114952  log_testekid_20210625_114952  log_workspace_20210625_114952
log/P(0,2)/: analise.ods  log_child_detection_20210625_102014  log_emotion_detection_20210625_102014  log_pose_20210625_102014  log_state_machine_distance_20210625_102014  log_testekid_20210625_102014  log_workspace_20210625_102014
log/circuloRaio1/: analise.ods  log_child_detection_20210613_154330  log_emotion_detection_20210613_154330  log_pose_20210613_154330  log_state_machine_distance_20210613_154330  log_state_machine_onchange_20210613_154330  log_testekid_20210613_154330  log_workspace_20210613_154330
log/com_fator/: analise.ods  log_child_detection_20210628_080038  log_emotion_detection_20210628_080038  log_pose_20210628_080038  log_state_machine_distance_20210628_080038  log_state_machine_onchange_20210628_080038  log_testekid_20210628_080038  log_workspace_20210628_080038
log/p(2,0)/: analise.ods  log_child_detection_20210613_085839  log_emotion_detection_20210613_085839  log_pose_20210613_085839  log_state_machine_distance_20210613_085839  log_state_machine_onchange_20210613_085839  log_testekid_20210613_085839  log_workspace_20210613_085839
log/path0/: analise.ods  log_child_detection_20210709_094822  log_emotion_detection_20210709_094822  log_pose_20210709_094822  log_state_machine_distance_20210709_094822  log_state_machine_onchange_20210709_094822  log_testekid_20210709_094822  log_workspace_20210709_094822
log/path1/: log_child_detection_20210720_082827  log_emotion_detection_20210720_082827  log_pose_20210720_082827  log_state_machine_distance_20210720_082827  log_state_machine_onchange_20210720_082827  log_testekid_20210720_082827  log_workspace_20210720_082827
log/path2/: analise.ods  log_child_detection_20210719_200206  log_emotion_detection_20210719_200206  log_pose_20210719_200206  log_state_machine_distance_20210719_200206  log_state_machine_onchange_20210719_200206  log_testekid_20210719_200206  log_workspace_20210719_200206
log/quadradoLado1/: analise.ods  log_child_detection_20210613_172547  log_emotion_detection_20210613_172547  log_pose_20210613_172547  log_state_machine_distance_20210613_172547  log_state_machine_onchange_20210613_172547  log_testekid_20210613_172547  log_workspace_20210613_172547
log/sem_fator/: analise.ods  log_child_detection_20210627_221857  log_emotion_detection_20210627_221857  log_pose_20210627_221857  log_state_machine_distance_20210627_221857  log_state_machine_onchange_20210627_221857  log_testekid_20210627_221857  log_workspace_20210627_221857
src/child_detection/: CMakeLists.txt  package.xml
src/child_detection/msg/: ChildDetection.msg
src/child_detection/src/: main.cpp
src/control_law/: CMakeLists.txt  package.xml
src/controle/: CMakeLists.txt  OLD.CMakeLists.txt
src/controle/msg/: Data.msg  Distance.msg  Emotion.msg  Plutchik.msg
src/controle/src/: AreaTrabalho.cpp  AreaTrabalho.h  Dimension.cpp  Dimension.h  Funcoes.cpp  Funcoes.h  Kid.cpp  Kid.h  Log.cpp  Log.h  PleasureArousalDominance.cpp  PleasureArousalDominance.h  Plutchik4D.cpp  Plutchik4D.h  Proxemica.cpp  Proxemica.h  Tempo.cpp  Tempo.h  controleMaria.cpp
src/controle/srv/: ChangeMode.srv
src/emotion_detection/: CMakeLists.txt
src/emotion_detection/include/: EmotionHypercube.h
src/emotion_detection/msg/: Vector4d.msg
src/emotion_detection/src/: EmotionHypercube.cpp  main.cpp
src/general_functions/: CMakeLists.txt  package.xml
src/marialog/: CMakeLists.txt
src/operation_modes/: CMakeLists.txt  package.xml
src/testekid/: CMakeLists.txt  package.xml
src/testekid/src/: main.cpp
(+187 files in other folders)
